# university-platform

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose-dev.yml  main.py  pyproject.toml  settings.py
api/: handlers.py  models.py
db/: dals.py  models.py  session.py
migrations/: README.md  env.py
migrations/versions/: 2024_05_12_1617-426ff17c001a_create_table_users.py
tests/: conftest.py
