[tool.poetry]
name = "University Platform"
version = "0.1.0"
description = "Навчальна платформа"
authors = ["CyberNet <serg.karetnuk333@gmail.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
