[tool.poetry]
name = "University Platform"
version = "0.1.0"
description = "Навчальна платформа"
authors = ["CyberNet <serg.karetnuk333@gmail.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
pydantic = {extras = ["email"], version = "^2.7.1"}
envparse = "^0.2.0"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
